--- a/Develop/index.html
+++ b/Develop/index.html
@@ -13,7 +13,7 @@
         <div>
             <ul>
                 <li>
-                    <a href="#search-engine-optimization">Search Engine Optimization</a>
+                    <a href="#search-engine-optimization">Search Engine Optimization</a> <!-- link broken need to change class to id for #search-engine-optimization -->
                 </li>
                 <li>
                     <a href="#online-reputation-management">Online Reputation Management</a>
