Added a title to website

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Horiseon</title> <!-- Changing title to be more relevent -->
+    <title>Horiseon Marketing Management</title> <!-- Changing title to be more relevent -->
 </head>
 
 <body>
