--- a/Develop/index.html
+++ b/Develop/index.html
@@ -25,7 +25,9 @@
         </nav>
     </header>
 
-    <section class="hero"></section>
+    <section class="hero">
+        <span class="background-image" role="img" aria-label="horiseon team working together in a meeting"></span>
+    </section>
 
     <main class="content"> <!-- changed semantic element to main -->
         <article id="search-engine-optimization" class="search-engine-optimization"> <!-- Added id to be consistent with the rest of the navigation bar -->
