updated readme file post alt messages

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -13,7 +13,7 @@
         <nav><!-- changed semantic to nav -->
             <ul>
                 <li>
-                    <a href="#search-engine-optimization">Search Engine Optimization</a> <!-- link broken need add id for #search-engine-optimization -->
+                    <a href="#search-engine-optimization">Search Engine Optimization</a> 
                 </li>
                 <li>
                     <a href="#online-reputation-management">Online Reputation Management</a>
@@ -26,7 +26,7 @@
     </header>
 
     <section class="hero">
-        <span class="background-image" role="img" aria-label="horiseon team working together in a meeting"></span>
+        <span class="background-image" role="img" aria-label="horiseon team working together in a meeting"></span> <!-- Adding an alt text for a css background image -->
     </section>
 
     <main class="content"> <!-- changed semantic element to main -->
